updated README.md, attempted to fix errors as well as issues

--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,7 @@
 ## DB
 # Local
-DB_URL=mongodb://localhost/productList
+# DB_URL=mongodb://localhost/productList
+DB_URL=mongodb://127.0.0.1:27017/
 
 # Atlas - replace UUU: user, PPP: password, XXX: hostname
 # DB_URL=mongodb+srv://UUU:PPP@XXX.mongodb.net/productList?retryWrites=true
